# dotcom

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pull-request.yaml
dotcom/: __init__.py  dotcom.py  request.py  response.py
